testing LIKE and Measure filters